fix card text overflow

--- a/frontend/src/app/card/card.scss
+++ b/frontend/src/app/card/card.scss
@@ -7,7 +7,9 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.2rem;
-	width: 350px;
+	min-width: 350px;
+	max-width: 750px;
+	overflow-wrap: break-word;
 	padding: 1rem;
 	border-radius: 12px;
 	position: relative;
@@ -15,8 +17,12 @@
 	color: inherit;
 	text-decoration: none;
 
-	&[href] { cursor: pointer; }
-	&:not([href]), &[href=""] {
+	&[href] {
+		cursor: pointer;
+	}
+
+	&:not([href]),
+	&[href=""] {
 		cursor: default;
 	}
 
@@ -47,6 +53,7 @@
 	from {
 		opacity: 0;
 	}
+
 	to {
 		opacity: 1;
 	}
